--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
+    "exif-reader": "^2.0.3",
     "sharp": "^0.34.5"
   },
-   "scripts": {
+  "scripts": {
     "deploy": "aws s3 sync ./public s3://fp-photographies.com --delete"
   }
 }
