fix js and MOAR pics

--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
     "exif-reader": "^2.0.3",
     "sharp": "^0.34.5"
   },
-  "scripts": {
-    "deploy": "aws s3 sync ./public s3://fp-photographies.com --delete"
-  }
+	"scripts": {
+	  "resize": "node resize.js",
+	  "sync": "aws s3 sync ./public s3://fp-photographies.com --delete",
+	  "clear": "aws cloudfront create-invalidation --distribution-id E1Z4DAW5TM7XK9 --paths /*",
+	  "deploy": "npm run resize && npm run sync && npm run clear"
+	}
 }
+
